adguard/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: web
---
apiVersion: v1
kind: Service
metadata:
  name: adgaurd-lb-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: phosphorous
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.15
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: adgaurd-lb-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: phosphorous
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.15
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
