adguard/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: public
  tls:
    - secretName: adguard-ingress-tls
      hosts:
        - adguard.sergi.cool
  rules:
    - host: adguard.sergi.cool
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: adguard
                port:
                  name: web
